clusters/beryjuio-prod/taskin/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: taskin
  labels:
    istio-injection: enabled
