clusters/beryjuio-prod/taskin/ui.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: taskin-ui
  namespace: taskin
  labels:
    app.kubernetes.io/name: taskin
    app.kubernetes.io/instance: main
    app.kubernetes.io/component: ui
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: taskin
      app.kubernetes.io/instance: main
  template:
    metadata:
      labels:
        app.kubernetes.io/name: taskin
        app.kubernetes.io/instance: main
        app.kubernetes.io/component: ui
    spec:
      containers:
        - env:
            - name: API_URL
              value: "http://taskin-api:8080/"
          image: ghcr.io/ripplefcl/taskin-ui:0.1.4
          name: taskin
          livenessProbe:
            httpGet:
              path: /
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 60
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 5
          ports:
            - containerPort: 8080
              name: http
          resources: {}
