clusters/beryjuio-prod/taskin/api.svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: taskin-api
  namespace: taskin
  labels:
    app.kubernetes.io/name: taskin-api
spec:
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app.kubernetes.io/name: taskin-api
    app.kubernetes.io/component: api
  type: ClusterIP
