clusters/beryjuio-prod/taskin/ui.svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: taskin-ui
  namespace: taskin
  labels:
    app.kubernetes.io/name: taskin-ui
spec:
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app.kubernetes.io/name: taskin
    app.kubernetes.io/component: ui
  type: ClusterIP
