clusters/beryjuio-prod/taskin/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: taskin
  namespace: taskin
  labels:
    app.kubernetes.io/name: taskin
spec:
  ingressClassName: istio
  rules:
    - host: taskin.lab.beryju.io
      http:
        paths:
          - backend:
              service:
                name: taskin-ui
                port:
                  name: http
            path: /
            pathType: Prefix
          - backend:
              service:
                name: taskin-api
                port:
                  name: http
            path: /api
            pathType: Prefix
  tls:
    - hosts:
        - taskin.lab.beryju.io
      secretName: beryju-io-taskin
